--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ config/master.key
 # dotenv, dotenv-rails
 # TODO Comment out these rules if environment variables can be committed
 .env
-.env.*
+.env*.local
 
 ## Environment normalization:
 /.bundle
@@ -67,3 +67,4 @@ yarn-debug.log*
 # Ignore uploaded files in development
 /storage/*
 !/storage/.keep
+/public/uploads
